--- a/ch99/blog/templates/blog/post_detail.html
+++ b/ch99/blog/templates/blog/post_detail.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+
+{% block title %}post_detail.html{% endblock %}
+
+{% block content %}
 <h2>{{object.title}}</h2>
 
 <p>
@@ -5,7 +10,7 @@
 	<!-- get_previous.get_absolute_url 함수를 지징하는 URL 패턴을 반환한다. -->
 	<!-- &laquo; 는 HTML 특수문자 '<<<' 를 의미한다.  -->
 	<a href="{{object.get_previous.get_absolute_url}}" title="View previous post">
-		&laquo;- {{object.get_previous}}
+		<i class="fas fa-arrow-circle-left"></i> {{object.get_next}}
 	</a>
 	{% endif %}
 
@@ -13,7 +18,7 @@
 	<!-- get_next.get_absolute_url 함수를 지칭하는 URL 패넡을 반환한다. -->
 	<!-- &raquo; 는 HTML 특수문자 '>>>'를 의미한다.  -->
 	| <a href="{{object.get_next.get_absolute_url}}" title="View next post">
-	{{object.get_next}} -&raquo;
+	{{object.get_previous}} <i class="fas fa-arrow-circle-right"></i>
 	</a>
 	{% endif %}
 
@@ -27,3 +32,4 @@
 <div>
 	{{object.content|linebreaks}}
 </div>
+{% endblock %}
