--- a/ch99/bookmark/templates/bookmark/bookmark_detail.html
+++ b/ch99/bookmark/templates/bookmark/bookmark_detail.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Django Bookmark Detail</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-	<div id="content">
-		
-		<h1>{{object.title}}</h1>
+{% block title %}bookmark_detail.html{% endblock %}
 
-		<ul>
-			<li>URL: <a href="{{object.url}}">{{object.url}}</a></li>
-		</ul>
+{% block content %}
+	<h1>{{object.title}}</h1>
 
-	</div>
-
-</body>
-</html>
+	<ul>
+		<li>URL : <a href="{{object.url}}">{{object.url}}</a></li>
+	</ul>
+{% endblock %}
