--- a/ch99/bookmark/templates/bookmark/bookmark_list.html
+++ b/ch99/bookmark/templates/bookmark/bookmark_list.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Django Bookmark List</title>
-</head>
-<body>
-	<div id="content">
-		<h1>Bookmark List</h1>
+{% extends "base.html" %}
 
-		<ul>
-			{% for bookmark in object_list %}
-				<li><a href="{% url 'detail' bookmark.id %}">{{ bookmark }}</a></li>
-			{% endfor %}
-		</ul>
+{% block title %}bookmark_list.html{% endblock %}
 
-	</div>
-</body>
-</html>
+{% block content %}
+
+    <h1>Bookmark List</h1>
+    <br>
+
+    <ul>
+        {% for bookmark in object_list %}
+        <li><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark }}</a></li>
+        {% endfor %}
+    </ul>
+
+{% endblock %}
+
