--- a/ch99/blog/templates/taggit/taggit_cloud.html
+++ b/ch99/blog/templates/taggit/taggit_cloud.html
@@ -2,23 +2,22 @@
 
 {% block title %}taggit_cloud.html{% endblock %}
 
-{% block extra-sytle %}
+{% block extra-style %}
 <style type="text/css">
-	.tag-cloud{
-		width: 40%;
-		margin-left: 30px;
-		text-align: center;
-		padding: 5px;
-		border: 1px solid orange;
-		background-color: #ffc;
-	}
-
-	.tag-1{font-size: 12px;}
-	.tag-2{font-size: 14px;}
-	.tag-3{font-size: 16px;}
-	.tag-4{font-size: 18px;}
-	.tag-5{font-size: 20px;}
-	.tag-6{font-size: 24px;}
+.tag-cloud{
+	width: 40%;
+	margin-left: 30px;
+	text-align: center;
+	padding: 5px;
+	border: 1px solid orange;
+	background-color: #ffc;
+}
+.tag-1 {font-size: 12px;}
+.tag-2 {font-size: 14px;}
+.tag-3 {font-size: 16px;}
+.tag-4 {font-size: 18px;}
+.tag-5 {font-size: 20px;}
+.tag-6 {font-size: 24px;}
 
 </style>
 {% endblock %}
