--- a/ch99/blog/templates/blog/post_detail.html
+++ b/ch99/blog/templates/blog/post_detail.html
@@ -2,6 +2,17 @@
 
 {% block title %}post_detail.html{% endblock %}
 
+{% block extra-style %}
+<style>
+	.post-body{
+		width:80%;
+		margin: auto;
+		font-family: "Lucida Grande", Verdana, Arial, sans-serif;
+		font-size: 16px;
+	}
+</style>
+{% endblock extra-style%}
+
 {% block content %}
 <h2>{{object.title}}</h2>
 
@@ -47,4 +58,26 @@
 	</a>
 </div>
 
+<br>
+<div id="disqus_thread"></div>
+{% endblock %}
+
+{% block extra-script %}
+<script>
+	var disqus_config = function(){
+		this.page_identifier = '{{disqus_id}}';
+		this.page.url = '{{disqus_url}}';
+		this.page.title = '{{disqus_title}}';
+	};
+
+	(function() {
+		var d = document, s = d.createElement('script');
+		s.src = 'http://{{disqus_short}}.disqus.com/embed.js';
+		s.setAttribute('data-timestamp', +new Date());
+		(d.head || d.body).appendChild(s);
+	})();
+</script>
+<noscript>
+	Please enable JavaScript to view the <a href="http://discus.com/?ref_noscript">comments powered by Disqus.</a>
+</noscript>
 {% endblock %}
