--- a/ch99/templates/base.html
+++ b/ch99/templates/base.html
@@ -32,7 +32,7 @@
 					<a class="nav-link text-white" href="{% url 'blog:index' %}">Blog</a>
 				</li>
 				<li class="nav-item mx-1 btn btn-primary">
-					<a class="nav-link text-white" href="">Photo</a>
+					<a class="nav-link text-white" href="{% url 'photo:index' %}">Photo</a>
 				</li>
 				<li class="nav-item dropdown mx-1 btn btn-primary">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
